Add postgresql operator templates

--- a/charts/templates/db-migrate-job.yaml
+++ b/charts/templates/db-migrate-job.yaml
@@ -38,10 +38,5 @@ spec:
             - name: {{ $key | upper }}
               value: {{ $value }}
             {{- end }}
-            - name: DATABASE_HOST
-              value: {{ template "postgresql.fullname" . }}
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ template "postgresql.fullname" . }}
-                  key: postgres-password
+            {{- include "postgresql.env" . | nindent 12 }}
+
