--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "blog.fullname" . }}
+  name: {{ include "postgresql.fullname" . }}
   annotations:
     argocd.argoproj.io/sync-wave: "3"
   labels:
@@ -41,13 +41,7 @@ spec:
             - name: {{ $key | upper }}
               value: {{ $value }}
             {{- end }}
-            - name: DATABASE_HOST
-              value: {{ template "postgresql.fullname" . }}
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ template "postgresql.fullname" . }}
-                  key: postgres-password
+            {{- include "postgresql.env" . | nindent 12 }}
       containers:
         - name: {{ .Chart.Name }}
           securityContext:
@@ -63,13 +57,7 @@ spec:
             - name: {{ $key | upper }}
               value: {{ $value }}
             {{- end }}
-            - name: DATABASE_HOST
-              value: {{ template "postgresql.fullname" . }}
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: {{ template "postgresql.fullname" . }}
-                  key: postgres-password
+            {{- include "postgresql.env" . | nindent 12 }}
           livenessProbe:
             httpGet:
               path: /healthcheck
