--- a/charts/templates/deployment.yaml
+++ b/charts/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{ include "postgresql.fullname" . }}
+  name: {{ include "blog.fullname" . }}
   annotations:
     argocd.argoproj.io/sync-wave: "3"
   labels:
