correct the cd command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -95,7 +95,7 @@ jobs:
             git config --global user.email "paul+circleci@wevans.io"
             git config --global user.name "CircleCI"
             git clone git@github.com:wevanscfi/homelab-gitops.git
-            cd homelab
+            cd homelab-gitops
             yq e -i '(.spec.source.helm.parameters[] | select(.name == "image.tag")).value = "'"$CIRCLE_SHA1"'"' manifests/wevans/templates/blog.yaml
             git add manifests/wevans/templates/blog.yaml
             git commit -m "Deploy blog: ${CIRCLE_SHA1}"
